--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "concurrently": "^8.2.2",
+        "formik": "^2.4.5",
+        "primereact": "^10.5.3",
         "prop-types": "^15.8.1",
         "react-icons": "^5.0.0",
         "react-router-dom": "^6.21.1"
