--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
+        "chroma-js": "^2.4.2",
         "concurrently": "^8.2.2",
         "formik": "^2.4.5",
+        "gsap": "^3.12.5",
         "primereact": "^10.5.3",
         "prop-types": "^15.8.1",
         "react-icons": "^5.0.0",
-        "react-router-dom": "^6.21.1"
+        "react-router-dom": "^6.21.1",
+        "swiper": "^11.0.7"
     }
 }
