--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "formik": "^2.4.5",
         "gsap": "^3.12.5",
         "jwt-decode": "^4.0.0",
+        "primeicons": "^7.0.0",
         "primereact": "^10.5.3",
         "prop-types": "^15.8.1",
         "react-icons": "^5.0.0",
