--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "prop-types": "^15.8.1",
         "react-icons": "^5.0.0",
         "react-router-dom": "^6.21.1",
+        "react-simple-wysiwyg": "^3.0.2",
         "swiper": "^11.0.7"
     }
 }
