--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@react-oauth/google": "^0.12.1",
         "chroma-js": "^2.4.2",
         "concurrently": "^8.2.2",
+        "date-fns": "^3.6.0",
         "formik": "^2.4.5",
         "gsap": "^3.12.5",
         "jwt-decode": "^4.0.0",
