--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "primeicons": "^7.0.0",
         "primereact": "^10.5.3",
         "prop-types": "^15.8.1",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-icons": "^5.0.0",
         "react-router-dom": "^6.21.1",
         "react-simple-wysiwyg": "^3.0.2",
