--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "date-fns": "^3.6.0",
         "formik": "^2.4.5",
         "gsap": "^3.12.5",
+        "html-to-text": "^9.0.5",
         "jwt-decode": "^4.0.0",
         "primeicons": "^7.0.0",
         "primereact": "^10.5.3",
