--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "chroma-js": "^2.4.2",
         "concurrently": "^8.2.2",
         "date-fns": "^3.6.0",
+        "emoji-picker-react": "^4.9.3",
         "formik": "^2.4.5",
         "gsap": "^3.12.5",
         "html-to-text": "^9.0.5",
