--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.3",
+        "pusher/pusher-php-server": "^7.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
