--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
         "gsap": "^3.12.5",
         "html-to-text": "^9.0.5",
         "jwt-decode": "^4.0.0",
+        "laravel-echo": "^1.16.1",
         "primeicons": "^7.0.0",
         "primereact": "^10.5.3",
         "prop-types": "^15.8.1",
+        "pusher-js": "^8.4.0-rc2",
+        "react-chat-elements": "^12.0.14",
         "react-copy-to-clipboard": "^5.1.0",
         "react-icons": "^5.0.0",
         "react-router-dom": "^6.21.1",
