--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,3 +31,16 @@ server {
         return 301 https://$host$request_uri;
     }
 }
+
+server {
+    listen 80;
+    server_name eneko.midiverse.local.com;
+
+    location / {
+        proxy_pass http://midiverse:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
