--- a/package.json
+++ b/package.json
@@ -46,5 +46,13 @@
         "react-router-dom": "^6.21.1",
         "react-simple-wysiwyg": "^3.0.2",
         "swiper": "^11.0.7"
+    },
+    "resolutions": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
