--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -35,12 +35,19 @@ server {
 server {
     listen 80;
     server_name eneko.midiverse.local.com;
-
     location / {
         proxy_pass http://midiverse:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+server {
+    listen 80;
+    server_name eneko.midiverse.local.com;
+    location / {
+        return 301 https://$host$request_uri;
     }
 }
