vite fix for development

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,10 +33,26 @@ server {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
     server_name eneko.midiverse.local.com;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
     location / {
         proxy_pass http://midiverse:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+server {
+    listen 5173 ssl;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    server_name eneko.vite.local.com;
+    location / {
+        proxy_pass https://midiverse:5173;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
